Remove various getRequestedXXX methods from JavaEnvironment
+review REVIEW-5473